# cmake-build-debug

./: CMakeLists.txt  Makefile  README.md  helloworld.edl
enclave/: CMakeLists.txt  Makefile  Makefile.bk  enc.cpp  hello.pb.cc  helloworld_args.h  helloworld_t.c  helloworld_t.h  private.pem  public.pem
host/: CMakeLists.txt  Makefile  Makefile.bk  hello.pb.h  helloworld_u.c  helloworld_u.h  helloworldhost  host.cpp  version.file
